--- a/_includes/links.html
+++ b/_includes/links.html
@@ -6,7 +6,7 @@
               </li>
               <li>
                 <a href="http://www.panxw.com">
-                  潘学文博客
+                  徐成山博客
                 </a>
               </li>
               <li>
@@ -28,5 +28,10 @@
                 <a href="/links.html">
                   交换友情链接
                 </a>
-              </li>				  
+              </li>				 
+              <li>
+                <a href="www.ahut.edu.cn">
+                  安工大官网
+                </a>
+              </li>      
             </ul>
