--- a/_includes/links.html
+++ b/_includes/links.html
@@ -5,7 +5,7 @@
                 </a>
               </li>
               <li>
-                <a href="http://www.panxw.com">
+                <a href="http://www.baidu.com">
                   徐成山博客
                 </a>
               </li>
