--- a/_includes/links.html
+++ b/_includes/links.html
@@ -30,7 +30,7 @@
                 </a>
               </li>				 
               <li>
-                <a href="www.ahut.edu.cn">
+                <a href="http;//www.ahut.edu.cn">
                   安工大官网
                 </a>
               </li>      
